--- a/plugin.yaml
+++ b/plugin.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   version: v1.0
   generate:
-    command: [gaw, convert, '.github/workflows/pull-request.yaml']
+    command: [gaw, convert, '*.yaml']
   discover:
-    fileName: "./.github/workflows/*.yaml"
+    fileName: "*.yaml"
   lockRepo: true
