feat: support workflow event binding

--- a/cmd/data/combine-workflow.yaml
+++ b/cmd/data/combine-workflow.yaml
@@ -6,6 +6,12 @@ metadata:
   name: simple
 spec:
   entrypoint: main
+  arguments:
+    parameters:
+      - name: branch
+        default: master
+      - name: pr
+        default: -1
   volumeClaimTemplates:
     - metadata:
         name: work
@@ -38,6 +44,12 @@ metadata:
   name: simple
 spec:
   entrypoint: main
+  arguments:
+    parameters:
+      - name: branch
+        default: master
+      - name: pr
+        default: -1
   volumeClaimTemplates:
     - metadata:
         name: work
