--- a/cmd/data/one-workflow-env.yaml
+++ b/cmd/data/one-workflow-env.yaml
@@ -4,6 +4,12 @@ metadata:
   name: simple
 spec:
   entrypoint: main
+  arguments:
+    parameters:
+      - name: branch
+        default: master
+      - name: pr
+        default: -1
   volumeClaimTemplates:
     - metadata:
         name: work
