feat: support concurrency setting

--- a/pkg/data/argo-workflows-concurrency.yaml
+++ b/pkg/data/argo-workflows-concurrency.yaml
@@ -18,6 +18,9 @@ spec:
         resources:
           requests:
             storage: 64Mi
+  synchronization:
+    mutex:
+      name: test
   templates:
     - name: main
       dag:
