fix: the workflow hook secret is required

--- a/pkg/testdata/argo-workflows-image.yaml
+++ b/pkg/testdata/argo-workflows-image.yaml
@@ -121,9 +121,13 @@ metadata:
 stringData:
   bitbucket.org: |
     type: bitbucket
+    secret: argo-workflow-secret
   bitbucketserver: |
     type: bitbucketserver
+    secret: argo-workflow-secret
   github.com: |
     type: github
+    secret: argo-workflow-secret
   gitlab.com: |
     type: gitlab
+    secret: argo-workflow-secret
