--- a/pkg/testdata/argo-workflows-image.yaml
+++ b/pkg/testdata/argo-workflows-image.yaml
@@ -96,6 +96,14 @@ subjects:
     name: github.com
     namespace: default
 ---
+kind: Secret
+apiVersion: v1
+metadata:
+  name: github.com.service-account-token
+  annotations:
+    kubernetes.io/service-account.name: github.com
+type: kubernetes.io/service-account-token
+---
 apiVersion: v1
 kind: ServiceAccount
 metadata:
@@ -113,6 +121,14 @@ subjects:
   - kind: ServiceAccount
     name: gitlab.com
     namespace: default
+---
+kind: Secret
+apiVersion: v1
+metadata:
+  name: gitlab.com.service-account-token
+  annotations:
+    kubernetes.io/service-account.name: gitlab.com
+type: kubernetes.io/service-account-token
 ---
 kind: Secret
 apiVersion: v1
