--- a/pkg/testdata/argo-workflows-complex-event.yaml
+++ b/pkg/testdata/argo-workflows-complex-event.yaml
@@ -60,7 +60,7 @@ metadata:
   name: imagetest-merge-request
 spec:
   event:
-    selector: payload.object_kind == "merge_request" && payload.project.path_with_namespace endsWith "" && (payload.object_attributes.target_branch == main) && payload.object_attributes.state == "opened"
+    selector: payload.object_kind == "merge_request" && payload.project.path_with_namespace endsWith "" && (payload.object_attributes.target_branch == "main") && payload.object_attributes.state == "opened"
   submit:
     workflowTemplateRef:
       name: imagetest
