--- a/pkg/testdata/argo-workflows-concurrency.yaml
+++ b/pkg/testdata/argo-workflows-concurrency.yaml
@@ -54,7 +54,7 @@ spec:
         command: [sh]
         env:
           - name: GOPROXY
-            value: https://goproxy.io,direct
+            value: "https://goproxy.io,direct"
         source: |
           go test ./... -coverprofile coverage.out
         volumeMounts:
@@ -67,7 +67,7 @@ spec:
         command: [sh]
         env:
           - name: GOPROXY
-            value: https://goproxy.io,direct
+            value: "https://goproxy.io,direct"
         source: |
           goreleaser release --skip-publish --rm-dist
         volumeMounts:
