--- a/pkg/testdata/argo-workflows-test-event.yaml
+++ b/pkg/testdata/argo-workflows-test-event.yaml
@@ -1,3 +1,4 @@
+
 ---
 apiVersion: argoproj.io/v1alpha1
 kind: WorkflowTemplate
@@ -50,7 +51,7 @@ spec:
       parameters:
         - name: branch
           valueFrom:
-            event: "payload.object_attributes.source_branch"
+            event: "payload.merge_request.source_branch"
         - name: pr
           valueFrom:
             event: "payload.merge_request.iid"
