--- a/pkg/testdata/argo-workflows-test-event.yaml
+++ b/pkg/testdata/argo-workflows-test-event.yaml
@@ -43,7 +43,7 @@ metadata:
   name: imagetest-test
 spec:
   event:
-    selector: payload.event_type == "note" && payload.merge_request.state == "opened" && payload.object_attributes.note == "/test" && payload.project.path_with_namespace endsWith ""
+    selector: payload.event_type == "note" && payload.merge_request.state == "opened" && payload.object_attributes.note == "/test" && payload.project.path_with_namespace endsWith "LinuxSuRen/yaml-readme"
   submit:
     workflowTemplateRef:
       name: imagetest
